# BugSearch

./: .gitattributes  .gitignore  BugFix.nfo  CMakeLists.txt  Doxyfile  README.md  Upgrading BugSearch.nfo  Upgrading Bugce.nfo  set_number
.github/workflows/: cmake-single-platform.yml  main.yml
BugSearch_GUI/BugSearch_GUI/: BugSearch_GUI.pro  SocketClassClient.cpp  SocketClassClient.h  cmainwidget.cpp  cmainwidget.h  connstates.h  main.cpp
Qt_GUI/: Qt_GUI.pro  SocketClassClient.cpp  SocketClassClient.h  main.cpp  mainwidget.cpp  mainwidget.h
include/: Bug.h  Bug_impl.hpp  Logger_thread.h  SocketClass.h
manual_test/: BugceAppDebugConfig.launch  bug.nfo  landscape.nfo  linux_test.sh  spiderman.nfo  spiderman_2.nfo
src/: Bug.cpp  BugApp.cpp  BugAppWin.cpp  BugSearchLinux.cpp  BugSearchWin.cpp  BugceAppLinux.cpp  CMakeLists.txt  Logger_thread.cpp  SocketClass.cpp
test/: BugceAppDebugConfig.launch  landscape.nfo  linux_test.sh  spiderman.txt
tst/: CMakeLists.txt  Simple_test.cpp
