PROJECT(bugce)

CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
CMAKE_POLICY(SET CMP0015 NEW)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE Debug)
if (UNIX)
SET(CMAKE_CXX_FLAGS "-std=c++11 -fPIC")
SET(CMAKE_CXX_FLAGS "-msse3")
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
SET(CMAKE_C_FLAGS "-msse3")
SET(CMAKE_C_FLAGS "-mavx")
endif(UNIX)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
    SET(CMAKE_BUILD_TYPE "Release")
ENDIF()

add_definitions(-DSIMPLE_LOG -DCHECK_TIME -DMULTI_THREAD)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
if (UNIX)
FILE(GLOB SRC_FILES "src/*Linux.cpp")
ENDIF()
if (WIN32)
FILE(GLOB SRC_FILES "src/*Win.cpp")
ENDIF()
#ADD_LIBRARY(BugceLib "src/Bug.cpp")
#SET_TARGET_PROPERTIES(BugceLib PROPERTIES ARCHIVE_OUTPUT_DIRECTORY 
#                      ${PROJECT_SOURCE_DIR}/lib)

if (UNIX)
ADD_EXECUTABLE (BugceAppLinux ${SRC_FILES})
TARGET_LINK_LIBRARIES (BugceAppLinux LINK_PUBLIC pthread boost_program_options)
ENDIF()
if (WIN32)
ADD_EXECUTABLE (BugceAppWin ${SRC_FILES})
TARGET_LINK_LIBRARIES (BugceAppWin LINK_PUBLIC)
ENDIF()

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY
    ${PROJECT_SOURCE_DIR}/bin)




